@@ -11,6 +11,7 @@ Changes for 1.9
 
 Changes for 1.8.4rc1
 
+ - [ZBX-3069] renamed monitoring graphs combobox "All" entry to "not selected" (Vedmak)
  - [ZBX-2872] greatly improved API methods consistency (Aly)
  - [ZBX-3070] fixed event date format inconsistency (Vedmak)
  - [ZBX-3068] fixed possible crash of server while processing passive proxies (Sasha)
